--- a/Projeto integrador/index.html
+++ b/Projeto integrador/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Tela Login</title>
 </head>
 <body>
             <div class="tela-login">
                 <div class="frame-2">
-                    <div class="login">Login</div>
-                    <div class="form">
-                        <div id="e-mail"><label for="e-mail" class="e-mail">E-mail:</label></div>
-                        <div id="rec-4"><input type="text" id="e-mail" name="e-mail" required class="rectangle-4"></div>
-                        <div id="key"><label for="senha" class="senha">Senha</label></div>
-                        <div id="pass"><input type="password" id="senha" name="senha" required class="rectangle-5"></div>
+                    <div>
+                        <h1 class="a1">Login</h1>
+                    </div>
+                    <form class="form" method="post">
+                        <div class="lg-key"><label for="e-mail" class="lg">E-mail:</label></div>
+                        <div class="rec"><input type="text" id="e-mail" name="e-mail" required class="rectangle"></div>
+                        <div class="lg-key"><label for="senha" class="lg">Senha</label></div>
+                        <div class="rec"><input type="password" id="senha" name="senha" required class="rectangle"></div>
                         <div class="esqueceu-a-senha"><a href="google.com.br">Esqueceu a senha?</a></div>
                         <div class="rectangle-7">
-                            <button class="entrar">
+                            <button class="but">
                                 <a href="google.com.br">Entrar</a>
                             </button>
                         </div>
@@ -31,16 +33,16 @@
                             </svg>
                             </div>
                         </a>
-                    </div>
+                    </form>
                 </div>
 
                 
                 
                 <div class="rectangle-8">
                     <div class="slogan">
-                        <img class="photo" src="20231105_165227_0000-PhotoRoom-removebg-preview (2).png" />
-                        <div class="d-asas-ao-seu-neg-cio-com-owl-flight">
-                            Dê asas ao seu negócio com OwlFlight
+                        <div id="photo"><img class="photo" src="foto-owl.png" /></div>
+                        <div id="frase">
+                            <h4 class="d-asas-ao-seu-neg-cio-com-owl-flight">Dê asas ao seu negócio com OwlFlight</h4>
                         </div>
                     </div>
                 </div>
